# spectral_film_lut

./: .gitignore  .pre-commit-config.yaml  README.md  film_spectral.py  gui.py  main.py  pyproject.toml  spectral_experiments.ipynb  spectral_film_lut.spec  spectral_lut.py  test.ipynb  utility.py  utils.py  zensical.toml
.github/workflows/: publish.yml  python-app.yml
docs/: 1_installation.md  2_usage.md  3_processing_pipeline.md  4_contributing.md  color_space.md  css_theme.md  densiometry.md  file_formats.md  film_data.md  film_loader.md  film_spectral.md  filmstock_selector.md  filmstocks.md  grain_generation.md  gui.md  gui_objects.md  index.md  installation.md  ref-gen.py  reference.md  splash_screen.md  usage.md  utils.md  wratten_filters.md
docs/reference/: color_space.md  css_theme.md  densiometry.md  file_formats.md  film_data.md  film_loader.md  film_spectral.md  filmstock_selector.md  grain_generation.md  gui.md  gui_objects.md  index.md  splash_screen.md  utils.md  wratten_filters.md
intermediate_film/: kodak_5242.py
negative_film/: kodak_5207.py  kodak_portra_400.py
print_film/: kodak_2383.py  kodak_2393.py  kodak_endura_premier.py
reversal_film/: fuji_instax_color.py  kodachrome_64.py
src/: filmstock_selector.py
src/spectral_film_lut/: __init__.py  __main__.py  color_processing.py  color_space.py  config.py  css_theme.py  densiometry.py  file_formats.py  film_data.py  film_loader.py  film_spectral.py  filmstock_selector.py  grain_generation.py  grain_tester.py  gui.py  gui_objects.py  splash_screen.py  utils.py  wratten_filters.py  xy_lut.py
src/spectral_film_lut/bw_negative_film/: kodak_5222.py  kodak_trix_400.py
src/spectral_film_lut/bw_print_film/: kodak_2302.py  kodak_2303.py  kodak_polymax_fine_art.py
src/spectral_film_lut/negative_film/: agfa_vista_100.py  fuji_c200.py  fuji_eterna_500.py  fuji_eterna_500_vivid.py  fuji_natura_1600.py  fuji_pro_160c.py  fuji_pro_160s.py  fuji_pro_400h.py  fuji_superia_reala.py  fuji_superia_xtra_400.py  kodak_5203.py  kodak_5206.py  kodak_5207.py  kodak_5213.py  kodak_5219.py  kodak_5247.py  kodak_5247_II.py  kodak_5248.py  kodak_5250.py  kodak_5277.py  kodak_5293.py  kodak_aerocolor.py  kodak_ektar_100.py  kodak_exr_5248.py  kodak_gold_200.py  kodak_portra_160.py  kodak_portra_400.py  kodak_portra_800.py  kodak_ultramax_400.py  kodak_vericolor_iii.py
src/spectral_film_lut/print_film/: fuji_3513di.py  fuji_3523XD.py  fuji_ca_dpII.py  fuji_ca_maxima.py  fuji_ca_pdII.py  fuji_ca_super_c.py  fujiflex_new.py  fujiflex_old.py  kodak_2383.py  kodak_2393.py  kodak_5381.py  kodak_5383.py  kodak_5384.py  kodak_duraflex_plus.py  kodak_dye_transfer_negative.py  kodak_dye_transfer_slide.py  kodak_endura_premier.py  kodak_exr_5386.py  kodak_portra_endura.py  kodak_supra_endura.py  technicolor_v.py
src/spectral_film_lut/resources/: __init__.py
src/spectral_film_lut/reversal_film/: fuji_fp100c.py  fuji_instax_color.py  fuji_provia_100f.py  fuji_velvia_50.py  kodachrome_64.py  kodak_aerochrome_iii.py  kodak_dye_transfer_separation.py  kodak_ektachrome_100d.py  kodak_ektachrome_e100.py  technicolor_iv.py
src/spectral_film_lut/reversal_print/: ilfochrome_micrographic_m.py  ilfochrome_micrographic_p.py  kodak_dye_transfer_kodachrome.py  kodak_dye_transfer_slide.py  kodak_ektachrome_radiance_iii.py
tests/: smoke_test.py
