[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral_film_lut"
dynamic = ["version"]
authors = [{ name = "Jan Lohse" }]
description = "GUI to create LUTs to emulate film from spectral datasheets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colour-science>=0.4.7",
    "imageio>=2.37.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numba>=0.64.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pyqt6>=6.10.2",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.2",
]

[project.urls]
Homepage = "https://github.com/JanLohse/spectral_film_lut"
Issues = "https://github.com/JanLohse/spectral_film_lut/issues"

[project.gui-scripts]
spectral_film_lut = "spectral_film_lut.__main__:run"

[tool.setuptools_scm]
write_to = "src/spectral_film_lut/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.ruff.lint]
extend-select = ["I", "E"]
extend-fixable = ["I", "E"]
